--- a/.github/workflows/sbom.yaml
+++ b/.github/workflows/sbom.yaml
@@ -19,10 +19,10 @@ jobs:
         output-file: project.sbom.json 
     # Install manifest-cli
     - run: docker create --name temp-container ghcr.io/manifest-cyber/manifest-cli:v0.18.6@sha256:5d00971905bfe41a1be5d75915acc3151a1f61d06184bf8cddd708cfc2d3a085 
-    - run: docker cp temp-container:/usr/bin/manifest-cli /usr/bin/manifest-cli
+    - run: docker cp temp-container:/usr/bin/manifest-cli /tmp/manifest-cli
     # Merge the sbom using the manifest-cli
     - run: |
-        /usr/bin/manifest-cli \
+        /tmp/manifest-cli \
           merge \
           --publish=false \
           -o spdx \
